немного поправил попап фильтра

--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -407,7 +407,7 @@
                             <button class="btn btn-rounded btn-info-outline filter-button hidden-md-up"
                                     ng-click="showCategoriesFilter()">Категория <i class="icmn-filter"></i></button>
                             <div class="panel filter-panel" ng-show="showCategories">
-                                <h4 class="panel-heading">Категории</h4>
+                                <h3 class="panel-heading" style="margin: 0; padding: 15px; padding-left: 50px;">Категории</h3>
                                 <div class="panel-body">
                                     <ul>
                                         <li style="list-style-type: none;">
