Фильтры: если включить два фильтра, а затем отключить один, повторная фильтрация не происходит

--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -349,8 +349,8 @@
                                     <br/>
                                     <div class="checkbox">
                                         <label>
-                                            <input name="social" type="checkbox" ng-model="filter.social"
-                                                   ng-change="filterAttachedSkillsByCategory('социальные', filter.social)">
+                                            <input name="social" type="checkbox" ng-model="filter.attached_social"
+                                                   ng-change="filterAttachedSkillsByCategory('социальные', filter.attached_social)">
                                             Социальные
                                         </label>
                                     </div>
@@ -422,8 +422,8 @@
                                         </li>
                                         <li style="list-style-type: none;">
                                             <label>
-                                                <input name="social" type="checkbox" ng-model="filter.social"
-                                                       ng-change="filterAttachedSkillsByCategory('социальные', filter.social)">
+                                                <input name="social" type="checkbox" ng-model="filter.attached_social"
+                                                       ng-change="filterAttachedSkillsByCategory('социальные', filter.attached_social)">
                                                 Социальные
                                             </label>
                                         </li>
